bubble content is no longer aligned to center.
horizontal overflow now wraps similair to dialog and lightbox.

audio option is disabled for bubble.

on hover disabled when audio or video is selected.

video now only available for dialog.

hotspots now triggers automaticly when tabbed to and set to "On hover"

hover disabled for non bubble options in frontend, backend support still exists. Has some unwanted interactions when tabbed to hs, or if hotspot is located behind close button.

removed show tooltip option from the hotspot editor, option did not do anything.

Show tooltip option moved from Hotspot appearance to top level to prevent users assuming this is only for non icon hotspots as these have their own appearance section.

--- a/modules/xerte/parent_templates/Nottingham/models_html5/connectorHotspotImage.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/connectorHotspotImage.css
@@ -74,8 +74,8 @@
 	div.hotspot_bubble {
 	z-index: 34;
 	position: fixed;
-		text-align: center;
 		overflow-y: auto;
+		word-wrap: break-word;
 	background: white;
 		border-radius: 10px;
 		border-color: black;
